--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,12 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+
+  intl: ^0.18.0
+  firebase_storage: ^11.0.4
+  image_picker: ^0.8.6+3
+  cloud_firestore: ^4.4.5
+  firebase_core: ^2.8.0
   flutter:
     sdk: flutter
 
@@ -36,6 +42,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  transparent_image: ^2.0.1
 
 dev_dependencies:
   flutter_test:
