--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-
+  sentry_flutter: ^7.1.0
+  location: ^4.4.0
   intl: ^0.18.0
   firebase_storage: ^11.0.4
   image_picker: ^0.8.6+3
@@ -43,6 +44,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   transparent_image: ^2.0.1
+  test: ^1.21.4
 
 dev_dependencies:
   flutter_test:
