--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  firebase_analytics: ^10.1.6
   sentry_flutter: ^7.1.0
   location: ^4.4.0
   intl: ^0.18.0
